Add UI for loading module (dummy data)

--- a/engine-core/src/main/resources/fxml/main.fxml
+++ b/engine-core/src/main/resources/fxml/main.fxml
@@ -50,6 +50,7 @@
                      </accelerator></MenuItem>
                </items>
           </Menu>
+            <Menu fx:id="modulesMenu" mnemonicParsing="false" text="%menu.modules" />
           <Menu fx:id="helpMenu" mnemonicParsing="false" text="%menu.help">
             <items>
               <MenuItem fx:id="aboutMenu" mnemonicParsing="false" text="%menu.about" />
